--- a/package.json
+++ b/package.json
@@ -9,20 +9,36 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@mdx-js/mdx": "^1.6.1",
+    "@mdx-js/react": "^1.6.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "gatsby": "2.21.13",
     "gatsby-image": "2.4.1",
     "gatsby-plugin-manifest": "2.4.2",
+    "gatsby-plugin-mdx": "^1.2.7",
     "gatsby-plugin-offline": "3.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "3.3.1",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "2.6.1",
+    "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-sitemap": "^2.4.2",
+    "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-tawk": "^1.0.0",
-    "gatsby-source-filesystem": "2.3.1",
-    "gatsby-transformer-sharp": "2.5.1",
+    "gatsby-plugin-tinacms": "^0.1.37",
+    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-images": "^3.3.3",
+    "gatsby-remark-normalize-paths": "^1.0.0",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-tinacms-git": "^0.4.11",
+    "gatsby-tinacms-json": "^0.8.22",
+    "gatsby-tinacms-remark": "^0.7.18",
+    "gatsby-transformer-json": "^2.4.3",
+    "gatsby-transformer-remark": "^2.8.8",
+    "gatsby-transformer-sharp": "^2.5.2",
+    "k": "^0.10.33",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.1",
@@ -32,6 +48,7 @@
     "react-simple-sidenav": "^2.0.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.0",
     "typeface-roboto": "^0.0.75"
   },
   "devDependencies": {
