--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
+    "@react-native-community/datetimepicker": "^2.4.0",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
@@ -21,6 +22,7 @@
     "gatsby-plugin-offline": "3.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "3.3.1",
+    "gatsby-plugin-react-native-web": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-sitemap": "^2.4.2",
@@ -45,6 +47,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "6.0.0",
     "react-modal": "^3.11.2",
+    "react-native": "^0.62.2",
+    "react-native-web": "~0.11.7",
     "react-simple-sidenav": "^2.0.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
