--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "mike wakerly <opensource@hoho.com>",
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.6.3",
+    "@devexpress/dx-react-scheduler": "^2.6.3",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.6.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -31,6 +34,7 @@
     "gatsby-remark-images": "^3.3.3",
     "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-cosmicjs": "^1.1.0",
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-tinacms-git": "^0.4.11",
     "gatsby-tinacms-json": "^0.8.22",
