--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet": "6.1.0",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
+    "react-reveal": "^1.2.2",
     "react-simple-sidenav": "^2.0.0",
     "styled-components": "^5.1.0",
     "typeface-roboto": "^0.0.75"
