--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@mdx-js/mdx": "1.6.13",
     "@mdx-js/react": "1.6.13",
+    "@reach/router": "^1.3.4",
+    "auth0-js": "^9.13.4",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "gatsby": "2.24.9",
