--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "2.3.22",
+    "gatsby-theme-firebase": "^1.0.10",
     "gatsby-transformer-json": "2.4.11",
     "gatsby-transformer-remark": "2.8.26",
     "gatsby-transformer-sharp": "2.5.11",
